apps/rhf-mui-docs/src/app/v3/components/mui/RHFAutocomplete/page.mdx
import { DocsPage, PropsTable, Callout, ComponentSourceLink } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFAutocomplete;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFAutocomplete

**RHFAutocomplete** extends [Autocomplete](https://v7.mui.com/material-ui/react-autocomplete/),
designed for searching and selecting an option from large datasets. Similar to
[RHFSelect](/v3/components/mui/RHFSelect), it supports selecting single or multiple options and
accepts options as an array of strings or an array of objects. This component is ideal
for use cases requiring dynamic filtering or managing extensive options seamlessly.

<Callout type="note">
  Due to the complexity of supporting arbitrary values in the Autocomplete while ensuring
  existing functionality remains unaffected, this component currently does **not** support
  the `freeSolo` prop of **Autocomplete**. This means users are restricted to selecting
  values exclusively from the dataset provided in the `options` prop, and cannot enter custom
  values.
</Callout>

## Usage

```tsx
import RHFAutocomplete, { RHFAutocompleteProps } from '@nish1896/rhf-mui-components/mui/autocomplete';
```

```tsx
<RHFAutocomplete
  fieldName="countriesVisited"
  control={control}
  options={['Azerbaijan', 'Canada', 'India']}
  errorMessage={errors?.countriesVisited?.message}
/>
```

For options as an array of objects:

```tsx
<RHFAutocomplete
  fieldName="countriesVisited"
  control={control}
  options={countryList} // imported from RHFCountrySelect
  labelKey="name"
  valueKey="name"
  errorMessage={errors?.countriesVisited?.message}
/>
```

<Callout type="warning">
  When using an array of objects for options, both `labelKey` and `valueKey`
  are required. If either is missing, an error will be thrown.
</Callout>

## Examples
- [Autocomplete Variations](https://v7.mui.com/material-ui/react-autocomplete/#playground)

## API
The `RHFAutocompleteProps` interface extends [AutocompleteProps](https://v7.mui.com/material-ui/api/autocomplete/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFAutocomplete}
  docsVersion={3}
  muiVersion={7}
  v3AndAbove
/>

## Source Code

<ComponentSourceLink
  path="mui/autocomplete"
  docsVersion={3}
/>
